test/libsolidity/syntaxTests/pragma/experimental_empty_string_literal.sol
pragma experimental "";
// ====
// experimental: true
// ----
// SyntaxError 3250: (0-23): Empty experimental feature name is invalid.
